--- a/House_Sales_in_King_Count_USA.ipynb
+++ b/House_Sales_in_King_Count_USA.ipynb
@@ -22,9 +22,49 @@
   "nbformat": 4,
   "cells": [
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": "<p style=\"text-align:center\">\n    <a href=\"https://skills.network/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkML0101ENSkillsNetwork20718538-2022-01-01\" target=\"_blank\">\n    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/assets/logos/SN_web_lightmode.png\" width=\"300\" alt=\"Skills Network Logo\">\n    </a>\n</p>\n\n<h1 align=\"center\"><font size=\"5\">Final Project: House Sales in King County, USA </font></h1>\n",
-      "metadata": {}
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "ename": "<class 'SyntaxError'>",
+          "evalue": "invalid syntax (<ipython-input-21-f4dfd735960a>, line 1)",
+          "traceback": [
+            "\u001b[0;36m  Cell \u001b[0;32mIn[21], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    <p style=\"text-align:center\">\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ],
+          "output_type": "error"
+        }
+      ],
+      "execution_count": 21
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -59,30 +99,50 @@
     {
       "cell_type": "code",
       "source": "# All Libraries required for this lab are listed below. The libraries pre-installed on Skills Network Labs are commented.\n# !mamba install -qy pandas==1.3.4 numpy==1.21.4 seaborn==0.9.0 matplotlib==3.5.0 scikit-learn==0.20.1\n# Note: If your environment doesn't support \"!mamba install\", use \"!pip install\"",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 22
     },
     {
       "cell_type": "code",
       "source": "# Surpress warnings:\ndef warn(*args, **kwargs):\n    pass\nimport warnings\nwarnings.warn = warn",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 23
     },
     {
       "cell_type": "code",
       "source": "#!pip install -U scikit-learn",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 24
     },
     {
       "cell_type": "code",
       "source": "import pandas as pd\nimport matplotlib.pyplot as plt\nimport numpy as np\nimport seaborn as sns\nfrom sklearn.pipeline import Pipeline\nfrom sklearn.preprocessing import StandardScaler,PolynomialFeatures\nfrom sklearn.linear_model import LinearRegression\n%matplotlib inline",
-      "metadata": {},
-      "outputs": [],
-      "execution_count": null
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "ename": "<class 'ModuleNotFoundError'>",
+          "evalue": "No module named 'seaborn'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[25], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Pipeline\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StandardScaler,PolynomialFeatures\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+          ],
+          "output_type": "error"
+        }
+      ],
+      "execution_count": 25
     },
     {
       "cell_type": "markdown",
@@ -97,30 +157,38 @@
     {
       "cell_type": "code",
       "source": "import piplite\nawait piplite.install('seaborn')",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 26
     },
     {
       "cell_type": "code",
       "source": "from pyodide.http import pyfetch\n\nasync def download(url, filename):\n    response = await pyfetch(url)\n    if response.status == 200:\n        with open(filename, \"wb\") as f:\n            f.write(await response.bytes())",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 27
     },
     {
       "cell_type": "code",
       "source": "filepath='https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DA0101EN-SkillsNetwork/labs/FinalModule_Coursera/data/kc_house_data_NaN.csv'",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 28
     },
     {
       "cell_type": "code",
       "source": "await download(filepath, \"housing.csv\")\nfile_name=\"housing.csv\"",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 29
     },
     {
       "cell_type": "markdown",
@@ -130,7 +198,9 @@
     {
       "cell_type": "code",
       "source": "df = pd.read_csv(file_name)",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -142,7 +212,9 @@
     {
       "cell_type": "code",
       "source": "#filepath='https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DA0101EN-SkillsNetwork/labs/FinalModule_Coursera/data/kc_house_data_NaN.csv'\n#df = pd.read_csv(filepath, header=None)",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -154,7 +226,9 @@
     {
       "cell_type": "code",
       "source": "df.head()",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -166,7 +240,9 @@
     {
       "cell_type": "code",
       "source": "df.dtypes",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -178,7 +254,9 @@
     {
       "cell_type": "code",
       "source": "df.describe()",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -195,7 +273,9 @@
     {
       "cell_type": "code",
       "source": "x_data=df.drop('id','Unnamed',axis=1)\ndf.describe() inplace=True",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -207,7 +287,9 @@
     {
       "cell_type": "code",
       "source": "print(\"number of NaN values for the column bedrooms :\", df['bedrooms'].isnull().sum())\nprint(\"number of NaN values for the column bathrooms :\", df['bathrooms'].isnull().sum())\n",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -219,7 +301,9 @@
     {
       "cell_type": "code",
       "source": "mean=df['bedrooms'].mean()\ndf['bedrooms'].replace(np.nan,mean, inplace=True)",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -231,14 +315,18 @@
     {
       "cell_type": "code",
       "source": "mean=df['bathrooms'].mean()\ndf['bathrooms'].replace(np.nan,mean, inplace=True)",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
     {
       "cell_type": "code",
       "source": "print(\"number of NaN values for the column bedrooms :\", df['bedrooms'].isnull().sum())\nprint(\"number of NaN values for the column bathrooms :\", df['bathrooms'].isnull().sum())",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -255,7 +343,9 @@
     {
       "cell_type": "code",
       "source": "df['houses', 'unique floor values'].value_counts().\ndf = to_frame()",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -267,7 +357,9 @@
     {
       "cell_type": "code",
       "source": "import seaborn as sns\nsns.boxplot(x='waterfront view',y='prices', data=df)",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -279,7 +371,9 @@
     {
       "cell_type": "code",
       "source": "import seaborn as sns\nsns.regplot(x='sqft_above',y='price', data=df)",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -291,7 +385,9 @@
     {
       "cell_type": "code",
       "source": "df.corr()['price'].sort_values()",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -308,7 +404,9 @@
     {
       "cell_type": "code",
       "source": "X = df[['long']]\nY = df['price']\nlm = LinearRegression()\nlm.fit(X,Y)\nlm.score(X, Y)",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -319,8 +417,10 @@
     },
     {
       "cell_type": "code",
-      "source": "X = df[[‘sqft_living’]]\nY = df['price'] \nlr.fit(X,Y)\nR2_score = lr.score(X,Y)",
-      "metadata": {},
+      "source": "X = df[[‘sqft_living’]]\nY = df['price'] \nlm = LinearRegression()\nlm.fit(X,Y)\nlm.score(X,Y)",
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -332,7 +432,9 @@
     {
       "cell_type": "code",
       "source": "\nfeatures = \"floors\", \"waterfront\",\"lat\" ,\"bedrooms\" ,\"sqft_basement\" ,\"view\" ,\"bathrooms\",\"sqft_living15\",\"sqft_above\",\"grade\",\"sqft_living\"]     ",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -343,8 +445,10 @@
     },
     {
       "cell_type": "code",
-      "source": "X = df[[\"floors\", \"waterfront\",\"lat\" ,\"bedrooms\" ,\"sqft_basement\" ,\"view\" ,\"bathrooms\",\"sqft_living15\",\"sqft_above\",\"grade\",\"sqft_living\" ]\nY = df['price'] \nlr.fit(X,Y)\nR2_score = lr.score(X,Y)",
-      "metadata": {},
+      "source": "X = df[[\"floors\", \"waterfront\",\"lat\" ,\"bedrooms\" ,\"sqft_basement\" ,\"view\" ,\"bathrooms\",\"sqft_living15\",\"sqft_above\",\"grade\",\"sqft_living\"] ]\nY = df['price'] \nlr.fit(X,Y)\nR2_score = lr.score(X,Y)",
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -356,7 +460,9 @@
     {
       "cell_type": "code",
       "source": "Input=[('scale',StandardScaler()),('polynomial', PolynomialFeatures(include_bias=False)),('model',LinearRegression())]",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -368,7 +474,9 @@
     {
       "cell_type": "code",
       "source": "\n1. from sklearn.pipeline import Pipeline\n2. from sklearn.preprocessing import StandardScaler \n3. Input=[('scale',StandardScaler()),('polynomial', PolynomialFeatures(include_bias=False)),('model',LinearRegression())]\n6. pipe= Pipeline(Input)\n7. Z = Z.astype(float)\n8. pipe.fit(Z,y)\n9. ypipe=pipe.predict(Z)\n10. R2_score = r2_score (Y,ypipe)\n",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -385,7 +493,9 @@
     {
       "cell_type": "code",
       "source": "from sklearn.model_selection import cross_val_score\nfrom sklearn.model_selection import train_test_split\nprint(\"done\")",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -397,7 +507,9 @@
     {
       "cell_type": "code",
       "source": "features =[\"floors\", \"waterfront\",\"lat\" ,\"bedrooms\" ,\"sqft_basement\" ,\"view\" ,\"bathrooms\",\"sqft_living15\",\"sqft_above\",\"grade\",\"sqft_living\"]    \nX = df[features]\nY = df['price']\n\nx_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.15, random_state=1)\n\n\nprint(\"number of test samples:\", x_test.shape[0])\nprint(\"number of training samples:\",x_train.shape[0])",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -409,16 +521,16 @@
     {
       "cell_type": "code",
       "source": "from sklearn.linear_model import Ridge",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": "x_train_pr= pr.fit_transform(x_train[[\"floors\", \"waterfront\",\"lat\" ,\"bedrooms\" ,\"sqft_basement\" ,\"view\" ,\"bathrooms\",\"sqft_living15\",\"sqft_above\",\"grade\",\"sqft_living\"] ) \nRigeModel= Ridge(alpha=0.1)\nRigeModel.fit(x_train_pr, y_train)\nyhat = RigeModel.predict(x_test_pr)\nR2_score = r2_score(y_test,yhat)",
-      "metadata": {},
-      "outputs": [],
-      "execution_count": null
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
@@ -428,7 +540,9 @@
     {
       "cell_type": "code",
       "source": "pr= PolynomialFeatures(degree=2) x_train_pr= pr.fit_transform(x_train[[\"floors\", \"waterfront\",\"lat\" ,\"bedrooms\" ,\"sqft_basement\" ,\"view\" ,\"bathrooms\",\"sqft_living15\",\"sqft_above\",\"grade\",\"sqft_living\"] ) \nx_test_pr=pr.fit_transform(x_test[[\"floors\", \"waterfront\",\"lat\" ,\"bedrooms\" ,\"sqft_basement\" ,\"view\" ,\"bathrooms\",\"sqft_living15\",\"sqft_above\",\"grade\",\"sqft_living\"]]])\nRigeModel= Ridge(alpha=0.1)\nRigeModel.fit(x_train_pr, y_train)\nyhat = RigeModel.predict(x_test_pr)\nR2_score = r2_score(y_test,yhat)",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     },
@@ -455,7 +569,9 @@
     {
       "cell_type": "code",
       "source": "",
-      "metadata": {},
+      "metadata": {
+        "trusted": true
+      },
       "outputs": [],
       "execution_count": null
     }
